Current State is rough