@@ -32,7 +32,6 @@ import com.apple.foundationdb.record.RecordCoreException;
 import com.apple.foundationdb.record.RecordCursor;
 import com.apple.foundationdb.record.ScanProperties;
 import com.apple.foundationdb.record.TupleRange;
-import com.apple.foundationdb.record.logging.KeyValueLogMessage;
 import com.apple.foundationdb.record.logging.LogMessageKeys;
 import com.apple.foundationdb.record.lucene.directory.FDBDirectoryManager;
 import com.apple.foundationdb.record.metadata.IndexAggregateFunction;
@@ -47,10 +46,11 @@ import com.apple.foundationdb.record.provider.foundationdb.IndexOperationResult;
 import com.apple.foundationdb.record.provider.foundationdb.IndexScanBounds;
 import com.apple.foundationdb.record.provider.foundationdb.indexes.InvalidIndexEntry;
 import com.apple.foundationdb.record.provider.foundationdb.indexes.StandardIndexMaintainer;
-import com.apple.foundationdb.record.provider.foundationdb.properties.RecordLayerPropertyKey;
 import com.apple.foundationdb.record.query.QueryToKeyMatcher;
 import com.apple.foundationdb.tuple.Tuple;
+import com.google.common.base.Joiner;
 import com.google.protobuf.Message;
+import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.DoublePoint;
 import org.apache.lucene.document.Field;
@@ -73,7 +73,6 @@ import org.slf4j.LoggerFactory;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -152,14 +151,8 @@ public class LuceneIndexMaintainer extends StandardIndexMaintainer {
                         .addLogInfo(LogMessageKeys.INDEX_NAME, state.index.getName());
             }
             LuceneScanAutoComplete scanAutoComplete = (LuceneScanAutoComplete)scanBounds;
-            try {
-                return new LuceneAutoCompleteResultCursor(getSuggester(scanAutoComplete.getGroupKey(),
-                        Collections.singletonList(scanAutoComplete.getKeyToComplete()), null), scanAutoComplete.getKeyToComplete(),
-                        executor, scanProperties, state, scanAutoComplete.getGroupKey(), highlightForAutoCompleteIfEnabled);
-            } catch (IOException ex) {
-                throw new RecordCoreException("Exception to get suggester for auto-complete search", ex)
-                        .addLogInfo(LogMessageKeys.INDEX_NAME, state.index.getName());
-            }
+            return new LuceneAutoCompleteResultCursor(scanAutoComplete.getKeyToComplete(),
+                    executor, scanProperties, getAutocompleteQueryAnalyzer(List.of(scanAutoComplete.getKeyToComplete())), state, scanAutoComplete.getGroupKey(), List.of("text"), highlightForAutoCompleteIfEnabled);
         }
 
         if (scanType.equals(LuceneScanTypes.BY_LUCENE_SPELL_CHECK)) {
@@ -174,50 +167,12 @@ public class LuceneIndexMaintainer extends StandardIndexMaintainer {
         throw new RecordCoreException("unsupported scan type for Lucene index: " + scanType);
     }
 
-    private boolean addTermToSuggesterIfNeeded(@Nonnull String value, @Nonnull String fieldName, @Nullable AnalyzingInfixSuggester suggester) {
-        if (suggester == null) {
-            return false;
-        }
-
-        final byte[] valueBytes = value.getBytes(StandardCharsets.UTF_8);
-        final RecordLayerPropertyKey<Integer> sizeLimitProp = LuceneRecordContextProperties.LUCENE_AUTO_COMPLETE_TEXT_SIZE_UPPER_LIMIT;
-        final int sizeLimit = Objects.requireNonNullElse(state.context.getPropertyStorage().getPropertyValue(sizeLimitProp), sizeLimitProp.getDefaultValue()).intValue();
-        // Ignore this text if its size exceeds the limitation
-        if (valueBytes.length > sizeLimit) {
-            if (LOG.isTraceEnabled()) {
-                LOG.trace(KeyValueLogMessage.of("Skip auto-complete indexing due to exceeding size limitation",
-                        LuceneLogMessageKeys.DATA_SIZE, valueBytes.length,
-                        LuceneLogMessageKeys.DATA_VALUE, value.substring(0, Math.min(value.length(), 100)),
-                        LogMessageKeys.FIELD_NAME, fieldName));
-            }
-            return false;
-        }
-
-        try {
-            suggester.add(new BytesRef(valueBytes),
-                    Set.of(new BytesRef(fieldName.getBytes(StandardCharsets.UTF_8))),
-                    state.context.getPropertyStorage().getPropertyValue(LuceneRecordContextProperties.LUCENE_AUTO_COMPLETE_DEFAULT_WEIGHT),
-                    new BytesRef(Tuple.from(fieldName).pack()));
-            if (LOG.isTraceEnabled()) {
-                LOG.trace(KeyValueLogMessage.of("Added auto-complete suggestion to suggester",
-                        LuceneLogMessageKeys.DATA_SIZE, valueBytes.length,
-                        LuceneLogMessageKeys.DATA_VALUE, value.substring(0, Math.min(value.length(), 100)),
-                        LogMessageKeys.FIELD_NAME, fieldName));
-            }
-            return true;
-        } catch (IOException ex) {
-            throw new RecordCoreException("Exception to add term into suggester", ex)
-                    .addLogInfo(LogMessageKeys.INDEX_NAME, state.index.getName());
-        }
-    }
-
     /**
      * Insert a field into the document and add a suggestion into the suggester if needed.
      * @return whether a suggestion has been added to the suggester
      */
     @SuppressWarnings("java:S3776")
-    private boolean insertField(LuceneDocumentFromRecord.DocumentField field, final Document document,
-                             @Nullable AnalyzingInfixSuggester suggester) {
+    private boolean insertField(LuceneDocumentFromRecord.DocumentField field, final Document document) {
         final String fieldName = field.getFieldName();
         final Object value = field.getValue();
         final Field luceneField;
@@ -229,7 +184,6 @@ public class LuceneIndexMaintainer extends StandardIndexMaintainer {
                 luceneField = new Field(fieldName, (String) value, getTextFieldType(field));
                 sortedField = null;
                 storedField = null;
-                suggestionAdded = addTermToSuggesterIfNeeded((String) value, fieldName, suggester);
                 break;
             case STRING:
                 luceneField = new StringField(fieldName, (String)value, field.isStored() ? Field.Store.YES : Field.Store.NO);
@@ -274,22 +228,26 @@ public class LuceneIndexMaintainer extends StandardIndexMaintainer {
         final List<String> texts = fields.stream()
                 .filter(f -> f.getType().equals(LuceneIndexExpressions.DocumentFieldType.TEXT))
                 .map(f -> (String) f.getValue()).collect(Collectors.toList());
+        Document document = new Document();
+        if (autoCompleteEnabled) {
+            List<String> nestedFields = fields.stream()
+                    .filter(f -> f.isNested())
+                    .filter(f -> f.getType().equals(LuceneIndexExpressions.DocumentFieldType.TEXT))
+                    .map(f -> (String) f.getValue()).collect(Collectors.toList());
+            if (nestedFields.size() > 0) {
+                document.add(new Field("TEXT_NESTED", Joiner.on(" ").join(nestedFields), getAutoCompleteTextFieldType()));
+            }
+        }
         final IndexWriter newWriter = directoryManager.getIndexWriter(groupingKey,
                 indexAnalyzerChooser.chooseAnalyzer(texts));
         BytesRef ref = new BytesRef(primaryKey);
-        Document document = new Document();
         document.add(new StoredField(PRIMARY_KEY_FIELD_NAME, ref));
         document.add(new SortedDocValuesField(PRIMARY_KEY_SEARCH_NAME, ref));
 
         Map<IndexOptions, List<LuceneDocumentFromRecord.DocumentField>> indexOptionsToFieldsMap = getIndexOptionsToFieldsMap(fields);
         for (Map.Entry<IndexOptions, List<LuceneDocumentFromRecord.DocumentField>> entry : indexOptionsToFieldsMap.entrySet()) {
-            final AnalyzingInfixSuggester suggester = autoCompleteEnabled ? getSuggester(groupingKey, texts, entry.getKey()) : null;
-            boolean suggestionAdded = false;
             for (LuceneDocumentFromRecord.DocumentField field : entry.getValue()) {
-                suggestionAdded = insertField(field, document, suggester) || suggestionAdded;
-            }
-            if (suggestionAdded) {
-                suggester.refresh();
+                insertField(field, document);
             }
         }
         newWriter.addDocument(document);
@@ -364,14 +322,8 @@ public class LuceneIndexMaintainer extends StandardIndexMaintainer {
         return AsyncUtil.DONE;
     }
 
-    /**
-     * Get the {@link AnalyzingInfixSuggester} for indexing or query, from the session of the context if there exists a corresponding one, or by creating a new one.
-     * @param indexOptions the {@link IndexOptions} for suggester's {@link FieldType}. This only matters for when the suggester is for indexing.
-     * The one for query can just use an arbitrary one, so just pass in a NULL when getting a suggester for query, so the existing one from session of context can be reused.
-     */
-    private AnalyzingInfixSuggester getSuggester(@Nullable Tuple groupingKey, @Nonnull List<String> texts, @Nullable IndexOptions indexOptions) throws IOException {
-        return directoryManager.getAutocompleteSuggester(groupingKey, autoCompleteIndexAnalyzerChooser.chooseAnalyzer(texts),
-                autoCompleteQueryAnalyzerChooser.chooseAnalyzer(texts), highlightForAutoCompleteIfEnabled, indexOptions);
+    private Analyzer getAutocompleteQueryAnalyzer(@Nonnull List<String> texts) {
+        return autoCompleteQueryAnalyzerChooser.chooseAnalyzer(texts).getAnalyzer();
     }
 
     private FieldType getTextFieldType(LuceneDocumentFromRecord.DocumentField field) {
@@ -385,6 +337,23 @@ public class LuceneIndexMaintainer extends StandardIndexMaintainer {
             ft.setStoreTermVectors((boolean) Objects.requireNonNullElse(field.getConfig(LuceneFunctionNames.LUCENE_FULL_TEXT_FIELD_WITH_TERM_VECTORS), false));
             ft.setStoreTermVectorPositions((boolean) Objects.requireNonNullElse(field.getConfig(LuceneFunctionNames.LUCENE_FULL_TEXT_FIELD_WITH_TERM_VECTOR_POSITIONS), false));
             ft.setOmitNorms((boolean) Objects.requireNonNullElse(field.getConfig(LuceneFunctionNames.LUCENE_FULL_TEXT_FIELD_WITH_OMIT_NORMS), false));
+            ft.freeze();
+        } catch (ClassCastException ex) {
+            throw new RecordCoreArgumentException("Invalid value type for Lucene field config", ex);
+        }
+
+        return ft;
+    }
+
+    private FieldType getAutoCompleteTextFieldType() {
+        FieldType ft = new FieldType();
+
+        try {
+            ft.setIndexOptions(IndexOptions.DOCS);
+            ft.setTokenized(true);
+            ft.setStored(false);
+            ft.setStoreTermVectors(false);
+            ft.setOmitNorms(true);
             ft.freeze();
         } catch (ClassCastException ex) {
             throw new RecordCoreArgumentException("Invalid value type for Lucene field config", ex);
